@@ -1,0 +1,12 @@
+# $Id$
+# vim:et:ft=sh:sts=2:sw=2
+#
+# Copyright 2011 Kate Ward. All Rights Reserved.
+# Released under the LGPL (GNU Lesser General Public License)
+#
+# Author: kate.ward@forestent.com (Kate Ward)
+#
+# Flag definition overrides for the gen_test_results.sh script.
+#
+
+DEFINE_string suite 'shflags_test.sh' 'unit test suite' s
